--- a/web/index.html
+++ b/web/index.html
@@ -12,5 +12,6 @@ and open the template in the editor.
     </head>
     <body>
         <h3>hi welcome to git hub</h3>
+        <h2>this is initial banche to merrge into main barnach</h2>
     </body>
 </html>
